fixing about picture not displaying on mobile

--- a/src/Components/About/About.scss
+++ b/src/Components/About/About.scss
@@ -67,6 +67,7 @@ section{
                 display: none;
             }
             .image-collection-mb{
+                display: block;
                 img{
                     width: 50%;
                     border: 5px solid white;
